--- a/.aigne/web-smith/history.yaml
+++ b/.aigne/web-smith/history.yaml
@@ -1,4 +1,20 @@
 entries:
+  - timestamp: 2025-10-17T10:20:41.423Z
+    operation: page_update
+    feedback: "remove Section 2: What is AIGNE DocSmith?"
+    page: /home
+  - timestamp: 2025-10-17T10:17:55.017Z
+    operation: page_update
+    feedback: add more sections below section1 to explain what is it, who uses it, why should i use it
+    page: /home
+  - timestamp: 2025-10-17T10:06:32.037Z
+    operation: page_update
+    feedback: remove Section 2:Finally, Documentation That Writes Itself
+    page: /home
+  - timestamp: 2025-10-17T03:57:42.660Z
+    operation: page_update
+    feedback: add more sections below section1 to explain what is it, who uses it, why should i use it
+    page: /home
   - timestamp: 2025-10-16T14:09:47.661Z
     operation: page_update
     feedback: "change section1 title to: Create great docs without writing them , and change section1
