--- a/.aigne/web-smith/pages/workspace/en/home.yaml
+++ b/.aigne/web-smith/pages/workspace/en/home.yaml
@@ -13,6 +13,44 @@
       - "text": "View on GitHub"
         "link": "https://github.com/AIGNE-io/aigne-doc-smith"
     "fullBackgroundHeroImage": "mediakit://hero-background.webp"
+  - "sectionName": "whoIsItFor"
+    "sectionSummary": "Outlines the target audiences for DocSmith, showcasing its versatility for both individual developers and teams."
+    "twoColumnGridTitle": "Who is DocSmith For?"
+    "list":
+      - "sectionName": "forDevelopers"
+        "sectionSummary": "Highlights DocSmith's benefits for individual developers."
+        "iconName": "lucide:user"
+        "cardTitle": "For Developers"
+        "cardDescription": "Spend less time writing and more time coding. Automatically generate, update, and translate your documentation to keep your projects perfectly documented with minimal effort."
+      - "sectionName": "forTeams"
+        "sectionSummary": "Highlights DocSmith's benefits for teams."
+        "iconName": "lucide:users"
+        "cardTitle": "For Teams"
+        "cardDescription": "Ensure consistency and accuracy across all your projects. DocSmith provides a single source of truth for your documentation, making collaboration and onboarding seamless."
+  - "sectionName": "whyUseDocsmith"
+    "sectionSummary": "Clearly communicates the core benefits of using DocSmith, answering the user's question of 'Why should I use it?'."
+    "twoColumnGridTitle": "Why Choose DocSmith?"
+    "list":
+      - "sectionName": "saveTime"
+        "sectionSummary": "Benefit 1: Save time and effort."
+        "iconName": "lucide:timer"
+        "cardTitle": "Save Massive Time"
+        "cardDescription": "Stop writing docs and start building. DocSmith automates the entire process, freeing you to focus on what matters most: your code."
+      - "sectionName": "improveQuality"
+        "sectionSummary": "Benefit 2: Improve documentation quality."
+        "iconName": "lucide:award"
+        "cardTitle": "Improve Doc Quality"
+        "cardDescription": "Eliminate human error and inconsistency. Our AI generates clear, comprehensive, and professional documentation every time."
+      - "sectionName": "stayCurrent"
+        "sectionSummary": "Benefit 3: Keep documentation up-to-date."
+        "iconName": "lucide:git-pull-request-arrow"
+        "cardTitle": "Effortlessly Stay Current"
+        "cardDescription": "Docs that write themselves. With automatic change detection, your documentation is always in sync with your latest release."
+      - "sectionName": "goGlobal"
+        "sectionSummary": "Benefit 4: Reach a global audience."
+        "iconName": "lucide:globe"
+        "cardTitle": "Go Global, Instantly"
+        "cardDescription": "Reach a worldwide audience with one command. Translate your docs into 12 languages with professional, context-aware accuracy."
   - "sectionName": "howItWorks"
     "sectionSummary": "Visually demonstrates DocSmith's core workflow with animated terminal players, building credibility by showing the tool's power and ease of use."
     "oneColumnGridTitle": "See DocSmith in Action"
