--- a/.aigne/web-smith/pages/workspace/ja/home.yaml
+++ b/.aigne/web-smith/pages/workspace/ja/home.yaml
@@ -1,18 +1,56 @@
 "meta":
-  "title": "AIGNE DocSmith | AI搭載のコードドキュメンテーション"
-  "description": "AIGNE DocSmithを使えば、コードベースから包括的で多言語対応のドキュメンテーションを自動生成できます。AI搭載ツールがコードを理解し、正確で最新のドキュメントを作成。時間と労力を節約します。"
+  "title": "AIGNE DocSmith | AIによるコードドキュメンテーション"
+  "description": "AIGNE DocSmithを使えば、コードベースから包括的な多言語ドキュメントを自動的に生成できます。AI搭載ツールがコードを理解し、正確で最新のドキュメントを作成することで、時間と労力を節約します。"
   "image": "mediakit://aigne-docsmith-hero.png"
 "sections":
   - "sectionName": "hero"
     "sectionSummary": "Introduces AIGNE DocSmith with a powerful headline, concise value proposition, and clear CTAs against an immersive background."
-    "fullBackgroundHeroCenteredTitle": "書かずに素晴らしいドキュメントを作成"
-    "fullBackgroundHeroCenteredDescription": "コードベースから直接、本番環境対応のドキュメントを生成、翻訳、公開。すべてのリリースと同期を保ちます。"
+    "fullBackgroundHeroCenteredTitle": "書くことなく、優れたドキュメントを作成"
+    "fullBackgroundHeroCenteredDescription": "コードベースから直接、本番環境に対応したドキュメントを生成、翻訳、公開。すべてのリリースと同期を保ちます。"
     "fullBackgroundHeroActions":
-      - "text": "今すぐはじめる"
+      - "text": "今すぐ始める"
         "link": "https://docsmith.aigne.io/docs/docsmith"
       - "text": "GitHubで見る"
         "link": "https://github.com/AIGNE-io/aigne-doc-smith"
     "fullBackgroundHeroImage": "mediakit://hero-background.webp"
+  - "sectionName": "whoIsItFor"
+    "sectionSummary": "Outlines the target audiences for DocSmith, showcasing its versatility for both individual developers and teams."
+    "twoColumnGridTitle": "DocSmithの対象ユーザー"
+    "list":
+      - "sectionName": "forDevelopers"
+        "sectionSummary": "Highlights DocSmith's benefits for individual developers."
+        "iconName": "lucide:user"
+        "cardTitle": "開発者向け"
+        "cardDescription": "ドキュメント作成の時間を減らし、コーディングに集中。ドキュメントの自動生成、更新、翻訳により、最小限の労力でプロジェクトを完璧に文書化します。"
+      - "sectionName": "forTeams"
+        "sectionSummary": "Highlights DocSmith's benefits for teams."
+        "iconName": "lucide:users"
+        "cardTitle": "チーム向け"
+        "cardDescription": "すべてのプロジェクトで一貫性と正確性を確保。DocSmithはドキュメントの信頼できる唯一の情報源を提供し、コラボレーションとオンボーディングをスムーズにします。"
+  - "sectionName": "whyUseDocsmith"
+    "sectionSummary": "Clearly communicates the core benefits of using DocSmith, answering the user's question of 'Why should I use it?'."
+    "twoColumnGridTitle": "DocSmithが選ばれる理由"
+    "list":
+      - "sectionName": "saveTime"
+        "sectionSummary": "Benefit 1: Save time and effort."
+        "iconName": "lucide:timer"
+        "cardTitle": "大幅な時間節約"
+        "cardDescription": "ドキュメント作成はやめて、開発を始めましょう。DocSmithがプロセス全体を自動化し、最も重要なコードに集中できます。"
+      - "sectionName": "improveQuality"
+        "sectionSummary": "Benefit 2: Improve documentation quality."
+        "iconName": "lucide:award"
+        "cardTitle": "ドキュメント品質の向上"
+        "cardDescription": "ヒューマンエラーと非一貫性を排除。AIが常に明確で包括的な、プロフェッショナルなドキュメントを生成します。"
+      - "sectionName": "stayCurrent"
+        "sectionSummary": "Benefit 3: Keep documentation up-to-date."
+        "iconName": "lucide:git-pull-request-arrow"
+        "cardTitle": "手間なく常に最新の状態を維持"
+        "cardDescription": "ドキュメントが自ら記述します。自動変更検出機能により、ドキュメントは常に最新のリリースと同期されます。"
+      - "sectionName": "goGlobal"
+        "sectionSummary": "Benefit 4: Reach a global audience."
+        "iconName": "lucide:globe"
+        "cardTitle": "瞬時にグローバル展開"
+        "cardDescription": "1つのコマンドで世界中のオーディエンスにリーチ。ドキュメントを12言語に、文脈を理解したプロの精度で翻訳します。"
   - "sectionName": "howItWorks"
     "sectionSummary": "Visually demonstrates DocSmith's core workflow with animated terminal players, building credibility by showing the tool's power and ease of use."
     "oneColumnGridTitle": "DocSmithの動作を見る"
@@ -21,7 +59,7 @@
         "sectionSummary": "Shows the 'generate' command, highlighting the zero-config documentation creation process."
         "terminalLeft":
           "title": "1. ドキュメントを生成"
-          "description": "コマンドを1つ実行するだけ。DocSmithがプロジェクトを分析し、構造を計画して、包括的なドキュメントをゼロから生成します。設定は不要です。"
+          "description": "コマンドを1つ実行するだけ。DocSmithがプロジェクトを分析し、構造を計画し、包括的なドキュメントをゼロから生成します。設定は不要です。"
           "actionTitle": ""
           "actionLink": ""
         "terminalPlaybackData": "mediakit://generate.json"
@@ -29,15 +67,15 @@
         "sectionSummary": "Demonstrates the 'update' command, showing how DocSmith keeps docs synced with code changes."
         "terminalRight":
           "title": "2. 同期を維持"
-          "description": "コードが変更されても大丈夫。DocSmithが更新を検知し、影響のあるセクションのみを再生成。ドキュメントを常に正確に保ちます。"
+          "description": "コードが変更されても大丈夫。DocSmithが更新を検出し、影響を受けるセクションのみを再生成するため、ドキュメントは常に正確です。"
           "actionTitle": ""
           "actionLink": ""
         "terminalPlaybackData": "mediakit://update.json"
       - "sectionName": "translateDemo"
         "sectionSummary": "Illustrates the 'translate' command, showcasing seamless multi-language translation."
         "terminalLeft":
-          "title": "3. 即座にグローバル展開"
-          "description": "グローバル展開へ。1つのコマンドで、ドキュメントを専門的にサポートされた12言語に翻訳。技術的な正確性を保証します。"
+          "title": "3. 瞬時にグローバル化"
+          "description": "グローバル展開しましょう。1つのコマンドで、技術的な正確性を確保しながら、公式にサポートされている12言語にドキュメントを翻訳します。"
           "actionTitle": ""
           "actionLink": ""
         "terminalPlaybackData": "mediakit://translate.json"
@@ -45,7 +83,7 @@
         "sectionSummary": "Highlights the 'publish' command, showing how easy it is to make documentation live."
         "terminalRight":
           "title": "4. ワンクリックで公開"
-          "description": "ライブに公開。DocSmithプラットフォームまたはお使いのDiscuss Kitインスタンスに直接公開し、チームや世界と共有できます。"
+          "description": "公開しましょう！DocSmithプラットフォームまたはお使いのDiscuss Kitインスタンスに直接公開し、チームや世界と共有できます。"
           "actionTitle": ""
           "actionLink": ""
         "terminalPlaybackData": "mediakit://publish.json"
@@ -57,46 +95,46 @@
         "sectionSummary": "Highlights AI-powered intelligent content generation."
         "iconName": "lucide:brain-circuit"
         "cardTitle": "インテリジェントな生成"
-        "cardDescription": "AIがコードの意図を理解し、「何」だけでなく「なぜ」を説明するコンテキスト豊かなコンテンツを生成します。論理的な構造が自動的に得られます。"
+        "cardDescription": "AIがコードの意図を理解し、「何」だけでなく「なぜ」を説明する文脈豊かなコンテンツを生成。論理的な構造を自動的に構築します。"
       - "sectionName": "multiLanguageSupport"
         "sectionSummary": "Highlights multi-language translation capabilities."
         "iconName": "lucide:languages"
         "cardTitle": "グローバル対応"
-        "cardDescription": "ドキュメントを12言語に翻訳。コンテキストを認識するAIが、専門的で技術的に正確な翻訳を保証します。"
+        "cardDescription": "ドキュメントを12言語に翻訳。文脈を認識するAIが、プロフェッショナルで技術的に正確な翻訳を保証します。"
       - "sectionName": "llmIntegration"
         "sectionSummary": "Highlights flexible Large Language Model integration."
         "iconName": "lucide:cubes"
         "cardTitle": "柔軟なLLMサポート"
-        "cardDescription": "AIGNE Hubをすぐに利用するか、OpenAI、Google、Anthropicなどの独自キーを持ち込めます。すべてをコントロール可能です。"
+        "cardDescription": "AIGNE Hubをすぐに利用するか、OpenAI、Google、Anthropicなどの独自のキーを使用できます。すべてあなた次第です。"
       - "sectionName": "smartUpdates"
         "sectionSummary": "Highlights the automatic documentation update feature."
         "iconName": "lucide:refresh-cw"
         "cardTitle": "常に最新"
-        "cardDescription": "DocSmithはコードの変更を自動検出し、関連ドキュメントのみを更新。時間を節約し、正確性を保証します。"
+        "cardDescription": "DocSmithはコードの変更を自動検出し、関連するドキュメントのみを更新するため、時間を節約し、正確性を保証します。"
       - "sectionName": "zeroConfig"
         "sectionSummary": "Highlights the easy, zero-configuration setup."
         "iconName": "lucide:zap"
-        "cardTitle": "設定不要"
-        "cardDescription": "数秒で開始できます。DocSmithはスマートなデフォルト設定で技術スタックを自動検出し、即座に実行可能です。"
+        "cardTitle": "ゼロコンフィグ"
+        "cardDescription": "数秒で開始できます。DocSmithはあなたの技術スタックを自動検出し、スマートなデフォルト設定ですぐに利用を開始できます。"
       - "sectionName": "oneClickPublishing"
         "sectionSummary": "Highlights the simple, one-click publishing workflow."
         "iconName": "lucide:rocket"
         "cardTitle": "ワンクリック公開"
-        "cardDescription": "1つのコマンドでDocSmith Cloudまたはお使いのDiscuss Kitインスタンスにドキュメントを公開。共有がこれまでになく簡単になります。"
+        "cardDescription": "1つのコマンドでDocSmith Cloudまたはお使いのDiscuss Kitインスタンスにドキュメントを公開。共有がこれまでになく簡単になりました。"
   - "sectionName": "quickStart"
     "sectionSummary": "Provides a simple two-step guide to get started. Each step is a clear card with a title, description, and code snippet."
-    "oneColumnGridTitle": "60秒でスタート"
+    "oneColumnGridTitle": "60秒で始めよう"
     "list":
       - "sectionName": "installCliCard"
         "sectionSummary": "First step of the quick start guide: installing the AIGNE CLI, shown in a card with a code block."
-        "contentCardTitle": "ステップ1：AIGNE CLIをインストール"
+        "contentCardTitle": "ステップ1: AIGNE CLIをインストール"
         "contentCardDescription": "1つのグローバルnpmインストールコマンドで、お使いのマシンにDocSmithを導入します。"
         "contentCardBottomCode":
           "name": "bash"
           "content": "npm install -g @aigne/cli"
       - "sectionName": "generateDocsCard"
         "sectionSummary": "Second step of the quick start guide: running the generate command, shown in a card with a code block."
-        "contentCardTitle": "ステップ2：最初のドキュメントを生成"
+        "contentCardTitle": "ステップ2: 最初のドキュメントを生成"
         "contentCardDescription": "プロジェクトのルートディレクトリに移動し、generateコマンドを実行します。分析から作成まで、残りはDocSmithが処理します。"
         "contentCardBottomCode":
           "name": "bash"
@@ -109,24 +147,24 @@
     "changelogTitle": "最新の更新情報"
     "changelogList":
       - "date": "2025-10-12"
-        "description": "機能：AFSを介したリポジトリからのコンテキスト取得がサポートされました。"
+        "description": "機能: AFSを介したリポジトリからのコンテキスト取得がサポートされました。"
       - "date": "2025-10-11"
-        "description": "修正：公開時のアクセストークン取得とセッションチェックを改善しました。"
+        "description": "修正: 公開時のアクセストークン取得とセッションチェックを改善しました。"
       - "date": "2025-10-11"
-        "description": "修正：ドキュメントチェック中にロケール情報が欠落する問題に対応しました。"
+        "description": "修正: ドキュメントチェック時にロケール情報が欠落する問題に対応しました。"
       - "date": "2025-10-11"
-        "description": "機能：ドキュメント生成における大規模なコンテキスト処理を最適化しました。"
+        "description": "機能: ドキュメント生成における大規模なコンテキスト処理を最適化しました。"
     "changelogAction":
       "text": "すべての変更履歴を見る"
       "link": "https://github.com/AIGNE-io/aigne-doc-smith/blob/main/CHANGELOG.md"
   - "sectionName": "finalCta"
     "sectionSummary": "A final, compelling call-to-action encouraging users to get started with DocSmith."
-    "ctaTitle": "ドキュメンテーションを自動化する準備はできましたか？"
+    "ctaTitle": "ドキュメント作成を自動化する準備はできましたか？"
     "ctaDescription": "手作業の繰り返しはもうやめましょう。AIGNE DocSmithが、常に最新の優れたドキュメントをあなたのために構築します。今すぐ始めて、コーディングの時間を取り戻しましょう！"
     "cta":
       - "text": "今すぐ試す"
         "link": "https://docsmith.aigne.io/docs/docsmith"
       - "text": "GitHubで見る"
         "link": "https://github.com/AIGNE-io/aigne-doc-smith"
-"title": "AIGNE DocSmith | AI搭載のコードドキュメンテーション"
-"description": "AIGNE DocSmithを使えば、コードベースから包括的で多言語対応のドキュメンテーションを自動生成できます。AIがコードを理解し、正確で最新のドキュメントを作成。時間を節約します。"
+"title": "AIGNE DocSmith | AIによるコードドキュメンテーション"
+"description": "AIGNE DocSmithを使えば、コードベースから包括的な多言語ドキュメントを自動的に生成できます。AIがコードを理解し、正確で最新のドキュメントを作成することで、時間を節約します。"
