--- a/.aigne/web-smith/pages/workspace/zh/home.yaml
+++ b/.aigne/web-smith/pages/workspace/zh/home.yaml
@@ -1,32 +1,70 @@
 "meta":
-  "title": "AIGNE DocSmith | AI 驱动的代码文档"
-  "description": "使用 AIGNE DocSmith 自动从您的代码库生成全面的多语言文档。我们由 AI 驱动的工具能够理解您的代码，从而创建准确、最新的文档，为您节省时间和精力。"
+  "title": "AIGNE DocSmith | 人工智能驱动的代码文档"
+  "description": "使用 AIGNE DocSmith 自动从您的代码库生成全面的多语言文档。我们的人工智能工具能够理解您的代码，创建准确、最新的文档，为您节省时间和精力。"
   "image": "mediakit://aigne-docsmith-hero.png"
 "sections":
   - "sectionName": "hero"
     "sectionSummary": "通过强有力的标题、简洁的价值主张和清晰的行动号召，在沉浸式背景下介绍 AIGNE DocSmith。"
     "fullBackgroundHeroCenteredTitle": "无需编写，即可创建出色的文档"
-    "fullBackgroundHeroCenteredDescription": "直接从您的代码库生成、翻译并发布生产就绪的文档——并与每个版本保持同步。"
+    "fullBackgroundHeroCenteredDescription": "直接从您的代码库生成、翻译和发布生产就绪的文档——并与每个版本保持同步。"
     "fullBackgroundHeroActions":
       - "text": "立即开始"
         "link": "https://docsmith.aigne.io/docs/docsmith"
       - "text": "在 GitHub 上查看"
         "link": "https://github.com/AIGNE-io/aigne-doc-smith"
     "fullBackgroundHeroImage": "mediakit://hero-background.webp"
+  - "sectionName": "whoIsItFor"
+    "sectionSummary": "概述 DocSmith 的目标受众，展示其对个人开发者和团队的通用性。"
+    "twoColumnGridTitle": "DocSmith 适用于哪些用户？"
+    "list":
+      - "sectionName": "forDevelopers"
+        "sectionSummary": "突出 DocSmith 对个人开发者的好处。"
+        "iconName": "lucide:user"
+        "cardTitle": "面向开发者"
+        "cardDescription": "花更少的时间编写文档，更多的时间编码。自动生成、更新和翻译您的文档，以最小的精力让您的项目保持完美的文档记录。"
+      - "sectionName": "forTeams"
+        "sectionSummary": "突出 DocSmith 对团队的好处。"
+        "iconName": "lucide:users"
+        "cardTitle": "面向团队"
+        "cardDescription": "确保所有项目的一致性和准确性。DocSmith 为您的文档提供单一事实来源，使协作和新成员入职流程无缝衔接。"
+  - "sectionName": "whyUseDocsmith"
+    "sectionSummary": "清晰地传达使用 DocSmith 的核心优势，回答用户“我为什么要使用它？”的问题。"
+    "twoColumnGridTitle": "为何选择 DocSmith？"
+    "list":
+      - "sectionName": "saveTime"
+        "sectionSummary": "优势1：节省时间和精力。"
+        "iconName": "lucide:timer"
+        "cardTitle": "节省大量时间"
+        "cardDescription": "停止编写文档，开始构建。DocSmith 自动化整个流程，让您能专注于最重要的事情：您的代码。"
+      - "sectionName": "improveQuality"
+        "sectionSummary": "优势2：提高文档质量。"
+        "iconName": "lucide:award"
+        "cardTitle": "提升文档质量"
+        "cardDescription": "消除人为错误和不一致性。我们的人工智能每次都能生成清晰、全面且专业的文档。"
+      - "sectionName": "stayCurrent"
+        "sectionSummary": "优势3：保持文档最新。"
+        "iconName": "lucide:git-pull-request-arrow"
+        "cardTitle": "轻松保持最新"
+        "cardDescription": "文档自我编写。通过自动变更检测，您的文档始终与最新发布版本保持同步。"
+      - "sectionName": "goGlobal"
+        "sectionSummary": "优势4：触达全球受众。"
+        "iconName": "lucide:globe"
+        "cardTitle": "即刻走向全球"
+        "cardDescription": "一个命令即可触达全球受众。以专业的、具备上下文感知能力的准确性将您的文档翻译成 12 种语言。"
   - "sectionName": "howItWorks"
-    "sectionSummary": "通过动画终端播放器直观地演示 DocSmith 的核心工作流程，展示该工具的强大功能和易用性，以建立可信度。"
-    "oneColumnGridTitle": "查看 DocSmith 的实际操作"
+    "sectionSummary": "通过动画终端播放器直观演示 DocSmith 的核心工作流程，通过展示该工具的强大功能和易用性来建立可信度。"
+    "oneColumnGridTitle": "查看 DocSmith 实际操作"
     "list":
       - "sectionName": "generateDemo"
         "sectionSummary": "展示 'generate' 命令，突出零配置文档创建过程。"
         "terminalLeft":
           "title": "1. 生成您的文档"
-          "description": "运行一个命令。DocSmith 会分析您的项目、规划结构，并从头开始生成全面的文档。无需配置。"
+          "description": "运行一个命令。DocSmith 会分析您的项目、规划结构并从头开始生成全面的文档。无需配置。"
           "actionTitle": ""
           "actionLink": ""
         "terminalPlaybackData": "mediakit://generate.json"
       - "sectionName": "updateDemo"
-        "sectionSummary": "演示 'update' 命令，展示 DocSmith 如何使文档与代码更改保持同步。"
+        "sectionSummary": "演示 'update' 命令，展示 DocSmith 如何保持文档与代码更改同步。"
         "terminalRight":
           "title": "2. 保持同步"
           "description": "代码有变动？DocSmith 会检测更新并仅重新生成受影响的部分，确保您的文档准确无误。"
@@ -34,10 +72,10 @@
           "actionLink": ""
         "terminalPlaybackData": "mediakit://update.json"
       - "sectionName": "translateDemo"
-        "sectionSummary": "说明 'translate' 命令，展示无缝的多语言翻译功能。"
+        "sectionSummary": "演示 'translate' 命令，展示无缝的多语言翻译功能。"
         "terminalLeft":
-          "title": "3. 即时走向全球"
-          "description": "走向全球。用一个命令将您的文档翻译成 12 种专业支持的语言，确保技术准确性。"
+          "title": "3. 即刻走向全球"
+          "description": "走向全球。一个命令即可将您的文档翻译成 12 种专业支持的语言，确保技术准确性。"
           "actionTitle": ""
           "actionLink": ""
         "terminalPlaybackData": "mediakit://translate.json"
@@ -50,54 +88,54 @@
           "actionLink": ""
         "terminalPlaybackData": "mediakit://publish.json"
   - "sectionName": "features"
-    "sectionSummary": "在一个易于浏览的 3 列网格中展示 DocSmith 的主要功能，每个功能都配有图标和面向效益的描述，以快速展示价值。"
+    "sectionSummary": "以易于浏览的 3 列网格形式呈现 DocSmith 的关键功能，每个功能都配有图标和面向效益的描述，以快速展示其价值。"
     "threeColumnGridTitle": "强大功能，轻松体验"
     "list":
       - "sectionName": "intelligentGeneration"
-        "sectionSummary": "突出 AI 驱动的智能内容生成。"
+        "sectionSummary": "突出人工智能驱动的智能内容生成。"
         "iconName": "lucide:brain-circuit"
         "cardTitle": "智能生成"
-        "cardDescription": "我们的 AI 能理解代码意图，生成富含上下文的内容，解释“为什么”而不仅仅是“是什么”。自动获得逻辑清晰的结构。"
+        "cardDescription": "我们的人工智能能够理解代码意图，生成富含上下文的内容，解释“为什么”而不仅仅是“是什么”。自动获得逻辑清晰的结构。"
       - "sectionName": "multiLanguageSupport"
         "sectionSummary": "突出多语言翻译能力。"
         "iconName": "lucide:languages"
-        "cardTitle": "全球就绪"
-        "cardDescription": "将文档翻译成 12 种语言。我们具有上下文感知能力的 AI 可确保专业、技术准确的翻译。"
+        "cardTitle": "全球化就绪"
+        "cardDescription": "将文档翻译成 12 种语言。我们具备上下文感知能力的人工智能可确保专业、技术准确的翻译。"
       - "sectionName": "llmIntegration"
-        "sectionSummary": "突出灵活的大语言模型集成。"
+        "sectionSummary": "突出灵活的大型语言模型集成。"
         "iconName": "lucide:cubes"
         "cardTitle": "灵活的 LLM 支持"
-        "cardDescription": "立即使用 AIGNE Hub，或自带 OpenAI、Google、Anthropic 等平台的密钥。一切由您掌控。"
+        "cardDescription": "即刻使用 AIGNE Hub，或自带 OpenAI、Google、Anthropic 等平台的密钥。一切由您掌控。"
       - "sectionName": "smartUpdates"
         "sectionSummary": "突出自动文档更新功能。"
         "iconName": "lucide:refresh-cw"
         "cardTitle": "始终保持最新"
         "cardDescription": "DocSmith 自动检测代码变更，并仅更新相关文档，从而节省时间并确保准确性。"
       - "sectionName": "zeroConfig"
-        "sectionSummary": "突出简便的零配置设置。"
+        "sectionSummary": "突出简单、零配置的设置。"
         "iconName": "lucide:zap"
         "cardTitle": "零配置"
-        "cardDescription": "数秒内即可开始。DocSmith 会自动检测您的技术栈，并提供智能默认设置，让您即刻运行。"
+        "cardDescription": "数秒内即可开始。DocSmith 自动检测您的技术栈，并提供智能默认设置，让您即刻运行。"
       - "sectionName": "oneClickPublishing"
         "sectionSummary": "突出简单的一键发布工作流程。"
         "iconName": "lucide:rocket"
         "cardTitle": "一键发布"
-        "cardDescription": "用一个命令将文档发布到 DocSmith Cloud 或您的 Discuss Kit 实例。分享从未如此简单。"
+        "cardDescription": "一个命令即可将文档发布到 DocSmith Cloud 或您的 Discuss Kit 实例。分享从未如此简单。"
   - "sectionName": "quickStart"
-    "sectionSummary": "提供一个简单的两步入门指南。每个步骤都是一个清晰的卡片，包含标题、描述和代码片段。"
+    "sectionSummary": "提供一个简单的两步入门指南。每一步都是一个清晰的卡片，包含标题、描述和代码片段。"
     "oneColumnGridTitle": "60 秒快速入门"
     "list":
       - "sectionName": "installCliCard"
-        "sectionSummary": "快速入门指南的第一步：安装 AIGNE CLI，显示在一个带有代码块的卡片中。"
+        "sectionSummary": "快速入门指南的第一步：安装 AIGNE CLI，显示在带有代码块的卡片中。"
         "contentCardTitle": "第 1 步：安装 AIGNE CLI"
-        "contentCardDescription": "通过一个全局 npm 安装命令，在您的机器上获取 DocSmith。"
+        "contentCardDescription": "通过一个全局 npm install 命令将 DocSmith 安装到您的机器上。"
         "contentCardBottomCode":
           "name": "bash"
           "content": "npm install -g @aigne/cli"
       - "sectionName": "generateDocsCard"
-        "sectionSummary": "快速入门指南的第二步：运行 generate 命令，显示在一个带有代码块的卡片中。"
+        "sectionSummary": "快速入门指南的第二步：运行 generate 命令，显示在带有代码块的卡片中。"
         "contentCardTitle": "第 2 步：生成您的第一份文档"
-        "contentCardDescription": "进入您项目的根目录并运行生成命令。DocSmith 会处理剩下的所有事情，从分析到创建。"
+        "contentCardDescription": "进入您项目的根目录并运行 generate 命令。DocSmith 会处理从分析到创建的其余所有工作。"
         "contentCardBottomCode":
           "name": "bash"
           "content": "cd /path/to/your/project
@@ -113,20 +151,20 @@
       - "date": "2025-10-11"
         "description": "修复：改进了发布时的访问令牌检索和会话检查。"
       - "date": "2025-10-11"
-        "description": "修复：解决了文档检查期间区域设置信息缺失的问题。"
+        "description": "修复：解决了文档检查期间缺少区域设置信息的问题。"
       - "date": "2025-10-11"
-        "description": "功能：优化了文档生成过程中的大上下文处理能力。"
+        "description": "功能：优化了文档生成中的大上下文处理能力。"
     "changelogAction":
       "text": "查看完整更新日志"
       "link": "https://github.com/AIGNE-io/aigne-doc-smith/blob/main/CHANGELOG.md"
   - "sectionName": "finalCta"
-    "sectionSummary": "最后，一个引人注目的行动号召，鼓励用户开始使用 DocSmith。"
+    "sectionSummary": "最后的、有说服力的行动号召，鼓励用户开始使用 DocSmith。"
     "ctaTitle": "准备好自动化您的文档了吗？"
-    "ctaDescription": "告别手动编写的繁琐。让 AIGNE DocSmith 为您构建出色、始终保持最新的文档。立即开始，将您的时间用在编码上！"
+    "ctaDescription": "告别手动重复工作。让 AIGNE DocSmith 为您构建出色、始终保持最新的文档。立即开始，将时间用回到编码上！"
     "cta":
       - "text": "立即试用"
         "link": "https://docsmith.aigne.io/docs/docsmith"
       - "text": "在 GitHub 上查看"
         "link": "https://github.com/AIGNE-io/aigne-doc-smith"
-"title": "AIGNE DocSmith | AI 驱动的代码文档"
-"description": "使用 AIGNE DocSmith 自动从您的代码库生成全面的多语言文档。我们的 AI 能理解您的代码，从而创建准确、最新的文档，为您节省时间。"
+"title": "AIGNE DocSmith | 人工智能驱动的代码文档"
+"description": "使用 AIGNE DocSmith 自动从您的代码库生成全面的多语言文档。我们的人工智能能够理解您的代码，创建准确、最新的文档，为您节省时间。"
