--- a/.aigne/web-smith/pages/workspace/zh-TW/home.yaml
+++ b/.aigne/web-smith/pages/workspace/zh-TW/home.yaml
@@ -1,48 +1,86 @@
 "meta":
   "title": "AIGNE DocSmith | AI 驅動的程式碼文件"
-  "description": "使用 AIGNE DocSmith 自動從您的程式碼庫生成全面、多語言的文件。我們的 AI 能理解您的程式碼，以建立準確、最新的文件，為您節省時間與精力。"
+  "description": "使用 AIGNE DocSmith，從您的程式碼庫自動產生全面、多國語言的文件。我們的 AI 工具能理解您的程式碼，建立準確、最新的文件，為您節省時間與精力。"
   "image": "mediakit://aigne-docsmith-hero.png"
 "sections":
   - "sectionName": "hero"
-    "sectionSummary": "以強大的標題、簡潔的價值主張、清晰的行動呼籲以及沉浸式背景介紹 AIGNE DocSmith。"
-    "fullBackgroundHeroCenteredTitle": "無需親手撰寫，即可建立出色的文件"
-    "fullBackgroundHeroCenteredDescription": "直接從您的程式碼庫生成、翻譯並發布可供生產環境使用的文件——並與每個版本保持同步。"
+    "sectionSummary": "以強大的標題、簡潔的價值主張，以及在沉浸式背景下的清晰行動呼籲來介紹 AIGNE DocSmith。"
+    "fullBackgroundHeroCenteredTitle": "無需親自撰寫，也能建立優質文件"
+    "fullBackgroundHeroCenteredDescription": "直接從您的程式碼庫產生、翻譯並發布可供生產環境使用的文件——並與每個版本保持同步。"
     "fullBackgroundHeroActions":
       - "text": "立即開始"
         "link": "https://docsmith.aigne.io/docs/docsmith"
       - "text": "在 GitHub 上查看"
         "link": "https://github.com/AIGNE-io/aigne-doc-smith"
     "fullBackgroundHeroImage": "mediakit://hero-background.webp"
+  - "sectionName": "whoIsItFor"
+    "sectionSummary": "概述 DocSmith 的目標受眾，展示其對個人開發者和團隊的多功能性。"
+    "twoColumnGridTitle": "DocSmith 適合哪些對象？"
+    "list":
+      - "sectionName": "forDevelopers"
+        "sectionSummary": "強調 DocSmith 對個人開發者的好處。"
+        "iconName": "lucide:user"
+        "cardTitle": "為開發者而設"
+        "cardDescription": "花費更少時間撰寫文件，投入更多時間編寫程式碼。自動產生、更新和翻譯您的文件，以最少的心力讓您的專案文件保持完美。"
+      - "sectionName": "forTeams"
+        "sectionSummary": "強調 DocSmith 對團隊的好處。"
+        "iconName": "lucide:users"
+        "cardTitle": "為團隊而設"
+        "cardDescription": "確保所有專案的一致性與準確性。DocSmith 為您的文件提供單一事實來源，讓協作與新成員上手流程更加順暢無礙。"
+  - "sectionName": "whyUseDocsmith"
+    "sectionSummary": "清楚傳達使用 DocSmith 的核心好處，回答使用者「我為什麼要使用它？」的問題。"
+    "twoColumnGridTitle": "為何選擇 DocSmith？"
+    "list":
+      - "sectionName": "saveTime"
+        "sectionSummary": "好處 1：節省時間和精力。"
+        "iconName": "lucide:timer"
+        "cardTitle": "節省大量時間"
+        "cardDescription": "停止撰寫文件，開始建構產品。DocSmith 將整個流程自動化，讓您能專注於最重要的事：您的程式碼。"
+      - "sectionName": "improveQuality"
+        "sectionSummary": "好處 2：提升文件品質。"
+        "iconName": "lucide:award"
+        "cardTitle": "提升文件品質"
+        "cardDescription": "消除人為錯誤與不一致性。我們的 AI 每次都能產生清晰、全面且專業的文件。"
+      - "sectionName": "stayCurrent"
+        "sectionSummary": "好處 3：保持文件更新。"
+        "iconName": "lucide:git-pull-request-arrow"
+        "cardTitle": "輕鬆保持最新狀態"
+        "cardDescription": "文件會自我更新。透過自動變更偵測，您的文件將永遠與最新發布版本保持同步。"
+      - "sectionName": "goGlobal"
+        "sectionSummary": "好處 4：觸及全球受眾。"
+        "iconName": "lucide:globe"
+        "cardTitle": "即時走向全球"
+        "cardDescription": "一個指令觸及全球受眾。將您的文件翻譯成 12 種語言，兼具專業與情境感知準確性。"
   - "sectionName": "howItWorks"
-    "sectionSummary": "透過動畫終端機播放器，視覺化展示 DocSmith 的核心工作流程，藉由呈現工具的強大功能與易用性來建立信譽。"
-    "oneColumnGridTitle": "實際了解 DocSmith 的運作方式"
+    "sectionSummary": "透過動畫終端機播放器，視覺化展示 DocSmith 的核心工作流程，藉由呈現工具的強大功能和易用性來建立可信度。"
+    "oneColumnGridTitle": "親眼見證 DocSmith 的實際操作"
     "list":
       - "sectionName": "generateDemo"
-        "sectionSummary": "展示「generate」指令，突顯零設定的文件建立過程。"
+        "sectionSummary": "展示 'generate' 指令，強調零設定的文件建立過程。"
         "terminalLeft":
-          "title": "1. 生成您的文件"
-          "description": "執行一個指令。DocSmith 會分析您的專案、規劃結構，並從頭開始生成全面的文件。無需設定。"
+          "title": "1. 產生您的文件"
+          "description": "執行一個指令。DocSmith 會分析您的專案、規劃結構，並從頭開始產生全面的文件。無需任何設定。"
           "actionTitle": ""
           "actionLink": ""
         "terminalPlaybackData": "mediakit://generate.json"
       - "sectionName": "updateDemo"
-        "sectionSummary": "展示「update」指令，說明 DocSmith 如何讓文件與程式碼變更保持同步。"
+        "sectionSummary": "展示 'update' 指令，顯示 DocSmith 如何使文件與程式碼變更保持同步。"
         "terminalRight":
           "title": "2. 保持文件同步"
-          "description": "程式碼有變動？DocSmith 會偵測更新並僅重新生成受影響的部分，確保您的文件保持準確。"
+          "description": "程式碼有變動？DocSmith 會偵測更新，並僅重新產生受影響的部分，確保您的文件準確無誤。"
           "actionTitle": ""
           "actionLink": ""
         "terminalPlaybackData": "mediakit://update.json"
       - "sectionName": "translateDemo"
-        "sectionSummary": "說明「translate」指令，展示無縫的多語言翻譯功能。"
+        "sectionSummary": "說明 'translate' 指令，展示無縫的多國語言翻譯功能。"
         "terminalLeft":
-          "title": "3. 立即全球化"
-          "description": "走向全球。透過一個指令，將您的文件翻譯成 12 種專業支援的語言，確保技術準確性。"
+          "title": "3. 即時走向全球"
+          "description": "走向全球。一個指令將您的文件翻譯成 12 種專業支援的語言，確保技術準確性。"
           "actionTitle": ""
           "actionLink": ""
         "terminalPlaybackData": "mediakit://translate.json"
       - "sectionName": "publishDemo"
-        "sectionSummary": "突顯「publish」指令，展示發布文件是多麼輕而易舉。"
+        "sectionSummary": "強調 'publish' 指令，顯示發布文件是多麼容易。"
         "terminalRight":
           "title": "4. 一鍵發布"
           "description": "上線發布！直接發布到 DocSmith 平台或您的 Discuss Kit 實例，與您的團隊或全世界分享。"
@@ -50,54 +88,54 @@
           "actionLink": ""
         "terminalPlaybackData": "mediakit://publish.json"
   - "sectionName": "features"
-    "sectionSummary": "以易於瀏覽的三欄網格呈現 DocSmith 的主要功能，每個功能都附有圖示和以效益為導向的描述，以快速展現價值。"
+    "sectionSummary": "以可快速掃視的三欄網格呈現 DocSmith 的主要功能，每個功能都附有圖示和以效益為導向的描述，以快速展現價值。"
     "threeColumnGridTitle": "強大功能，輕鬆體驗"
     "list":
       - "sectionName": "intelligentGeneration"
-        "sectionSummary": "突顯由 AI 驅動的智慧內容生成。"
+        "sectionSummary": "強調由 AI 驅動的智慧內容產生。"
         "iconName": "lucide:brain-circuit"
-        "cardTitle": "智慧生成"
-        "cardDescription": "我們的 AI 能理解程式碼的意圖，生成富含情境的內容，解釋「為何如此」，而不僅是「做了什麼」。自動獲得邏輯清晰的結構。"
+        "cardTitle": "智慧化產生"
+        "cardDescription": "我們的 AI 能理解程式碼的意圖，產生富含情境的內容，不僅解釋「是什麼」，更闡明「為什麼」。自動獲得合乎邏輯的結構。"
       - "sectionName": "multiLanguageSupport"
-        "sectionSummary": "突顯多語言翻譯能力。"
+        "sectionSummary": "強調多國語言翻譯能力。"
         "iconName": "lucide:languages"
-        "cardTitle": "全球就緒"
-        "cardDescription": "將文件翻譯成 12 種語言。我們具備情境感知能力的 AI 可確保專業且技術準確的翻譯。"
+        "cardTitle": "全球化就緒"
+        "cardDescription": "將文件翻譯成 12 種語言。我們具備情境感知能力的 AI 確保翻譯既專業又具技術準確性。"
       - "sectionName": "llmIntegration"
-        "sectionSummary": "突顯彈性的大型語言模型整合。"
+        "sectionSummary": "強調靈活的大型語言模型整合。"
         "iconName": "lucide:cubes"
-        "cardTitle": "彈性的 LLM 支援"
-        "cardDescription": "立即使用 AIGNE Hub，或帶入您自己的 OpenAI、Google、Anthropic 等平台的金鑰。由您全權掌控。"
+        "cardTitle": "靈活的 LLM 支援"
+        "cardDescription": "立即使用 AIGNE Hub，或帶入您自己的 OpenAI、Google、Anthropic 等金鑰。一切由您掌控。"
       - "sectionName": "smartUpdates"
-        "sectionSummary": "突顯自動文件更新功能。"
+        "sectionSummary": "強調自動文件更新功能。"
         "iconName": "lucide:refresh-cw"
-        "cardTitle": "隨時保持最新"
-        "cardDescription": "DocSmith 會自動偵測程式碼變動，並僅更新相關文件，節省時間並確保準確性。"
+        "cardTitle": "永遠保持最新"
+        "cardDescription": "DocSmith 會自動偵測程式碼變更，並僅更新相關文件，節省時間並確保準確性。"
       - "sectionName": "zeroConfig"
-        "sectionSummary": "突顯簡單的零設定安裝。"
+        "sectionSummary": "強調簡單、零設定的安裝過程。"
         "iconName": "lucide:zap"
         "cardTitle": "零設定"
-        "cardDescription": "幾秒鐘內即可開始。DocSmith 會自動偵測您的技術堆疊，並提供智慧的預設值，讓您立即開始運作。"
+        "cardDescription": "數秒內即可開始。DocSmith 會自動偵測您的技術堆疊，並採用智慧預設值，讓您立即上手。"
       - "sectionName": "oneClickPublishing"
-        "sectionSummary": "突顯簡單的一鍵發布工作流程。"
+        "sectionSummary": "強調簡單的一鍵發布工作流程。"
         "iconName": "lucide:rocket"
         "cardTitle": "一鍵發布"
-        "cardDescription": "透過一個指令，將文件發布到 DocSmith Cloud 或您的 Discuss Kit 實例。分享從未如此簡單。"
+        "cardDescription": "一個指令即可將文件發布到 DocSmith Cloud 或您的 Discuss Kit 實例。分享從未如此簡單。"
   - "sectionName": "quickStart"
-    "sectionSummary": "提供一個簡單的兩步驟指南以開始使用。每個步驟都是一個清晰的卡片，包含標題、描述和程式碼片段。"
-    "oneColumnGridTitle": "60 秒內快速上手"
+    "sectionSummary": "提供一個簡單的兩步驟入門指南。每個步驟都是一個清晰的卡片，包含標題、描述和程式碼片段。"
+    "oneColumnGridTitle": "60 秒快速入門"
     "list":
       - "sectionName": "installCliCard"
-        "sectionSummary": "快速入門指南的第一步：安裝 AIGNE CLI，顯示於帶有程式碼區塊的卡片中。"
+        "sectionSummary": "快速入門指南的第一步：安裝 AIGNE CLI，顯示在帶有程式碼區塊的卡片中。"
         "contentCardTitle": "步驟 1：安裝 AIGNE CLI"
         "contentCardDescription": "透過一個全域 npm 安裝指令，將 DocSmith 安裝到您的電腦上。"
         "contentCardBottomCode":
           "name": "bash"
           "content": "npm install -g @aigne/cli"
       - "sectionName": "generateDocsCard"
-        "sectionSummary": "快速入門指南的第二步：執行 generate 指令，顯示於帶有程式碼區塊的卡片中。"
-        "contentCardTitle": "步驟 2：生成您的第一份文件"
-        "contentCardDescription": "前往您專案的根目錄並執行 generate 指令。DocSmith 會處理從分析到建立的所有後續工作。"
+        "sectionSummary": "快速入門指南的第二步：執行 generate 指令，顯示在帶有程式碼區塊的卡片中。"
+        "contentCardTitle": "步驟 2：產生您的第一份文件"
+        "contentCardDescription": "前往您專案的根目錄並執行 generate 指令。DocSmith 會處理後續一切，從分析到建立。"
         "contentCardBottomCode":
           "name": "bash"
           "content": "cd /path/to/your/project
@@ -105,28 +143,28 @@
 
             aigne doc generate"
   - "sectionName": "changelog"
-    "sectionSummary": "以易於瀏覽的格式顯示 AIGNE DocSmith 的最新更新，並附有完整更新日誌的連結。"
+    "sectionSummary": "以易於掃描的格式顯示 AIGNE DocSmith 的最新更新，並附有完整更新日誌的連結。"
     "changelogTitle": "最新更新"
     "changelogList":
       - "date": "2025-10-12"
-        "description": "功能：現已支援透過 AFS 從儲存庫中檢索情境。"
+        "description": "新功能：現已支援透過 AFS 從儲存庫中擷取情境。"
       - "date": "2025-10-11"
-        "description": "修復：改善了發布時的存取權杖檢索與工作階段檢查。"
+        "description": "修復：改善了發布時的存取權杖擷取與工作階段檢查。"
       - "date": "2025-10-11"
-        "description": "修復：解決了文件檢查期間缺少地區設定資訊的問題。"
+        "description": "修復：解決了文件檢查期間遺失語系資訊的問題。"
       - "date": "2025-10-11"
-        "description": "功能：優化了文件生成中的大型情境處理能力。"
+        "description": "新功能：優化了文件產生時對大型情境的處理。"
     "changelogAction":
       "text": "查看完整更新日誌"
       "link": "https://github.com/AIGNE-io/aigne-doc-smith/blob/main/CHANGELOG.md"
   - "sectionName": "finalCta"
-    "sectionSummary": "最後一個強而有力的行動呼籲，鼓勵使用者開始使用 DocSmith。"
-    "ctaTitle": "準備好自動化您的文件了嗎？"
-    "ctaDescription": "停止繁瑣的手動工作。讓 AIGNE DocSmith 為您建立出色且隨時保持最新的文件。立即開始，將時間重新投入到程式碼上！"
+    "sectionSummary": "最後一個引人注目的行動呼籲，鼓勵使用者開始使用 DocSmith。"
+    "ctaTitle": "準備好將您的文件自動化了嗎？"
+    "ctaDescription": "告別繁瑣的手動工作。讓 AIGNE DocSmith 為您建立出色且永遠保持最新的文件。立即開始，把時間用回寫程式碼上！"
     "cta":
       - "text": "立即試用"
         "link": "https://docsmith.aigne.io/docs/docsmith"
       - "text": "在 GitHub 上查看"
         "link": "https://github.com/AIGNE-io/aigne-doc-smith"
 "title": "AIGNE DocSmith | AI 驅動的程式碼文件"
-"description": "使用 AIGNE DocSmith 自動從您的程式碼庫生成全面、多語言的文件。我們的 AI 能理解您的程式碼，以建立準確、最新的文件，為您節省時間。"
+"description": "使用 AIGNE DocSmith，從您的程式碼庫自動產生全面、多國語言的文件。我們的 AI 能理解您的程式碼，建立準確、最新的文件，為您節省時間。"
