update doc smith landing page

--- a/.aigne/web-smith/history.yaml
+++ b/.aigne/web-smith/history.yaml
@@ -1,4 +1,24 @@
 entries:
+  - timestamp: 2025-10-17T11:04:24.062Z
+    operation: page_update
+    feedback: "Add action link to publish step in section 4:
+      https://docsmith.aigne.io/docs/docsmith/guides-publishing-your-docs-21ae40"
+    page: /home
+  - timestamp: 2025-10-17T10:54:35.583Z
+    operation: page_update
+    feedback: Add action link to translate step in section
+      4:https://docsmith.aigne.io/docs/docsmith/guides-translating-documentation-21ae40
+    page: /home
+  - timestamp: 2025-10-17T10:52:50.217Z
+    operation: page_update
+    feedback: Add action link to update step in section
+      4:https://docsmith.aigne.io/docs/docsmith/guides-updating-documentation-21ae40
+    page: /home
+  - timestamp: 2025-10-17T10:51:00.832Z
+    operation: page_update
+    feedback: "Add action link to generate step in section 4:
+      https://docsmith.aigne.io/docs/docsmith/guides-generating-documentation-21ae40"
+    page: /home
   - timestamp: 2025-10-17T10:20:41.423Z
     operation: page_update
     feedback: "remove Section 2: What is AIGNE DocSmith?"
