--- a/.aigne/web-smith/pages/workspace/en/home.yaml
+++ b/.aigne/web-smith/pages/workspace/en/home.yaml
@@ -60,32 +60,32 @@
         "terminalLeft":
           "title": "1. Generate Your Docs"
           "description": "Run one command. DocSmith analyzes your project, plans the structure, and generates comprehensive docs from scratch. No config needed."
-          "actionTitle": ""
-          "actionLink": ""
+          "actionTitle": "Learn about Generating Docs"
+          "actionLink": "https://docsmith.aigne.io/docs/docsmith/guides-generating-documentation-21ae40"
         "terminalPlaybackData": "mediakit://generate.json"
       - "sectionName": "updateDemo"
         "sectionSummary": "Demonstrates the 'update' command, showing how DocSmith keeps docs synced with code changes."
         "terminalRight":
           "title": "2. Keep Them in Sync"
           "description": "Code changes? DocSmith detects updates and regenerates only affected sections, keeping your docs accurate."
-          "actionTitle": ""
-          "actionLink": ""
+          "actionTitle": "Learn about Updating Docs"
+          "actionLink": "https://docsmith.aigne.io/docs/docsmith/guides-updating-documentation-21ae40"
         "terminalPlaybackData": "mediakit://update.json"
       - "sectionName": "translateDemo"
         "sectionSummary": "Illustrates the 'translate' command, showcasing seamless multi-language translation."
         "terminalLeft":
           "title": "3. Go Global Instantly"
           "description": "Go global. Translate your docs into 12 professionally supported languages with one command, ensuring technical accuracy."
-          "actionTitle": ""
-          "actionLink": ""
+          "actionTitle": "Learn about Translating Docs"
+          "actionLink": "https://docsmith.aigne.io/docs/docsmith/guides-translating-documentation-21ae40"
         "terminalPlaybackData": "mediakit://translate.json"
       - "sectionName": "publishDemo"
         "sectionSummary": "Highlights the 'publish' command, showing how easy it is to make documentation live."
         "terminalRight":
           "title": "4. Publish with One Click"
           "description": "Go live! Publish directly to the DocSmith platform or your Discuss Kit instance to share with your team or the world."
-          "actionTitle": ""
-          "actionLink": ""
+          "actionTitle": "Learn about Publishing Docs"
+          "actionLink": "https://docsmith.aigne.io/docs/docsmith/guides-publishing-your-docs-21ae40"
         "terminalPlaybackData": "mediakit://publish.json"
   - "sectionName": "features"
     "sectionSummary": "Presents key DocSmith features in a scannable 3-column grid, each with an icon and benefit-oriented description to quickly show value."
