--- a/.aigne/web-smith/config.yaml
+++ b/.aigne/web-smith/config.yaml
@@ -5,9 +5,9 @@ projectDesc: AIGNE DocSmith is a powerful, AI-driven documentation generation
   structured, and multi-language documentation directly from your source code.
 projectLogo: https://avatars.githubusercontent.com/u/143965177?v=4
 # staging doc-smith pageskit
-projectId: 36edcca5-5b56-4a1b-98b9-3690595a7588
+# projectId: 36edcca5-5b56-4a1b-98b9-3690595a7588
 # production doc-smith pageskit
-# projectId: 32271a73-5577-4e85-953a-375231c7cc95
+projectId: 32271a73-5577-4e85-953a-375231c7cc95
 projectSlug: /
 
 # =============================================================================
@@ -110,7 +110,7 @@ defaultDatasources: # Default datasources included in every page
 # minImageWidth: Only images wider than this value (in pixels) will be used in page generation
 media:
   minImageWidth: 800
-lastGitHead: db72f52b0b5e85a6f78eb772d5ceb4ff2b9f95f1
+lastGitHead: 1174b9279ecceb4fe6f64396361329cacca3f923
 # Checkout ID for website deployment service
 checkoutId: ""
 projectCover: .aigne/web-smith/cover.png
@@ -119,4 +119,5 @@ translateLanguages:
   - zh-TW
   - ja
 # appUrl: https://docsmith.aigne.io/
-appUrl: https://staging.docsmith.aigne.io/
+# appUrl: https://staging.docsmith.aigne.io/
+appUrl: https://docsmith.aigne.io/
