--- a/agents/generate/draw-diagram.yaml
+++ b/agents/generate/draw-diagram.yaml
@@ -10,7 +10,7 @@ input_schema:
   properties:
     documentContent:
       type: string
-      description: The **raw text content** of the current document. (**Note:** This is the original document and **does not include** any existing diagram source code.)
+      description: The **raw text content** of the current document. (**Note:** This is the original document and **does not include** any diagram source code.)
   required:
     - documentContent
 output_schema:
